# GamePhysicsEngine2D

./: CMakeLists.txt  GamePhysicsEngine2D.cpp  GamePhysicsEngine2D.h  README.md  main.cpp
source/: Application.cpp  Application.h  Colour.cpp  Colour.h  Config.h  Renderer.cpp  Renderer.h  Vector2.cpp  Vector2.h
source/physics/: Body.cpp  Body.h  CollisionDetection.cpp  CollisionDetection.h  CollisionResolution.cpp  CollisionResolution.h  Contact.h  IShape.cpp  IShape.h  ShapeType.h
source/physics/shapes/: ShapeBox.cpp  ShapeBox.h  ShapeCircle.cpp  ShapeCircle.h  ShapePolygon.cpp  ShapePolygon.h
